--- a/pyproject.toml
+++ b/pyproject.toml
@@ -220,16 +220,42 @@ devtools = [
     "jupyterlab>=4.3.4",
     "ipywidgets>=8.1.5",
 ]
+security = [
+    # Security and compliance
+    "cryptography>=44.0.0",  # Model encryption
+    "pynacl>=1.5.0",  # Cryptographic library
+    "paramiko>=3.5.0",  # SSH for secure connections
+]
+dashboard = [
+    # Interactive dashboard
+    "streamlit>=1.40.0",
+    "plotly>=5.24.0",
+    "altair>=5.5.0",
+    "bokeh>=3.6.0",
+]
+benchmarks = [
+    # Benchmarking and comparison
+    "openml>=0.14.2",  # OpenML dataset repository
+    "scikit-learn-intelex>=2024.7.0",  # Intel optimizations
+]
+docs_gen = [
+    # Automated documentation generation
+    "pdoc3>=0.11.1",
+    "sphinx>=8.1.3",
+    "sphinx-rtd-theme>=3.0.2",
+    "docstring-parser>=0.16",
+]
 production = [
     # Production-ready exabyte-scale stack
-    "automl[distributed,api,monitoring,tracking]",
+    "automl[distributed,api,monitoring,tracking,security]",
+]
+ultimate = [
+    # Everything - nothing left out
+    "automl[distributed,gpu,vision,nlp,timeseries,api,monitoring,tracking,security,dashboard,benchmarks,docs_gen]",
 ]
 all = [
-    "automl[distributed,gpu,vision,nlp,timeseries,autogluon,nas,api,monitoring,tracking]",
+    "automl[ultimate]",
 ]
-
-[project.scripts]
-automl = "automl.cli:main"
 
 [tool.uv]
 package = true
