--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["uv_build>=0.8.22,<0.9.0"]
+requires = ["uv_build"]
 build-backend = "uv_build"
 
 [project]
@@ -39,6 +39,70 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
+dependencies = [
+    # Core scientific computing (latest versions)
+    "numpy",
+    "pandas",
+    "polars",  # Blazing fast dataframes
+    "scikit-learn",
+    "scipy",
+    "pyarrow",
+    
+    # Gradient boosting frameworks (GPU-enabled)
+    "lightgbm",
+    "xgboost",
+    "catboost",
+    
+    # Hyperparameter optimization
+    "optuna",
+    "optuna-integration",
+    "hyperopt",
+    "scikit-optimize",
+    "bayesian-optimization",
+    
+    # Configuration management
+    "hydra-core",
+    "omegaconf",
+    "pydantic",
+    "pydantic-settings",
+    "pyyaml",
+    
+    # MLOps and tracking
+    "mlflow",
+    "wandb",
+    "tensorboard",
+    
+    # Model explainability
+    "shap",
+    "lime",
+    "interpret",
+    
+    # Feature engineering
+    "featuretools",
+    "category-encoders",
+    "feature-engine",
+    
+    # CLI and UI
+    "rich",
+    "typer",
+    "click",
+    "tqdm",
+    
+    # Async and concurrency
+    "asyncio",
+    "joblib",
+    "loky",
+    
+    # Data validation
+    "pandera",
+    "great-expectations",
+    
+    # Caching and serialization
+    "diskcache",
+    "msgpack",
+    "orjson",
+    "cloudpickle",
+]
 
 [project.urls]
 Homepage = "https://github.com/Jainam1673/AutoML"
@@ -50,208 +114,143 @@ Changelog = "https://github.com/Jainam1673/AutoML/blob/main/CHANGELOG.md"
 [project.scripts]
 automl = "automl.cli:app"
 
-dependencies = [
-    # Core scientific computing (latest versions)
-    "numpy>=2.1.2",
-    "pandas>=2.2.3",
-    "polars>=1.13.1",  # Blazing fast dataframes
-    "scikit-learn>=1.5.2",
-    "scipy>=1.14.1",
-    "pyarrow>=18.1.0",
-    
-    # Gradient boosting frameworks (GPU-enabled)
-    "lightgbm>=4.5.0",
-    "xgboost>=2.1.2",
-    "catboost>=1.2.7",
-    
-    # Hyperparameter optimization
-    "optuna>=4.1.0",
-    "optuna-integration>=4.1.0",
-    "hyperopt>=0.2.7",
-    "scikit-optimize>=0.10.2",
-    "bayesian-optimization>=2.0.0",
-    
-    # Configuration management
-    "hydra-core>=1.3.2",
-    "omegaconf>=2.3.0",
-    "pydantic>=2.10.3",
-    "pydantic-settings>=2.6.1",
-    "pyyaml>=6.0.2",
-    
-    # MLOps and tracking
-    "mlflow>=2.18.0",
-    "wandb>=0.18.7",
-    "tensorboard>=2.18.0",
-    
-    # Model explainability
-    "shap>=0.46.0",
-    "lime>=0.2.0.1",
-    "interpret>=0.6.5",
-    
-    # Feature engineering
-    "featuretools>=1.31.0",
-    "category-encoders>=2.6.4",
-    "feature-engine>=1.8.1",
-    
-    # CLI and UI
-    "rich>=13.9.4",
-    "typer>=0.15.1",
-    "click>=8.1.7",
-    "tqdm>=4.67.1",
-    
-    # Async and concurrency
-    "asyncio>=3.4.3",
-    "joblib>=1.4.2",
-    "loky>=3.4.1",
-    
-    # Data validation
-    "pandera>=0.20.4",
-    "great-expectations>=1.2.3",
-    
-    # Caching and serialization
-    "diskcache>=5.6.3",
-    "msgpack>=1.1.0",
-    "orjson>=3.10.12",
-    "cloudpickle>=3.1.0",
-]
-
 [project.optional-dependencies]
 distributed = [
     # Ray for distributed computing and hyperparameter search
-    "ray[default]>=2.40.0",
-    "ray[tune]>=2.40.0",
-    "ray[serve]>=2.40.0",
-    "ray[data]>=2.40.0",
+    "ray[default]",
+    "ray[tune]",
+    "ray[serve]",
+    "ray[data]",
     # Dask for out-of-core computation and exabyte-scale datasets
-    "dask[complete]>=2024.11.2",
-    "dask-ml>=2024.4.4",
-    "distributed>=2024.11.2",
+    "dask[complete]",
+    "dask-ml",
+    "distributed",
     # Cloud storage integration
-    "s3fs>=2024.10.0",  # S3 support
-    "gcsfs>=2024.10.0",  # Google Cloud Storage
-    "adlfs>=2024.7.0",  # Azure Data Lake
-    "fsspec>=2024.10.0",  # Unified filesystem interface
+    "s3fs",  # S3 support
+    "gcsfs",  # Google Cloud Storage
+    "adlfs",  # Azure Data Lake
+    "fsspec",  # Unified filesystem interface
 ]
-gpu = [
-    "torch>=2.5.1",
-    "torchvision>=0.20.1",
-    "lightning>=2.4.0",
-    "flash-attn>=2.7.2",
-    "cupy-cuda12x>=13.3.0",
-    "cuml-cu12>=24.12.0",
-    "xgboost[gpu]>=2.1.2",
-]
+# gpu = [  # Not yet fully compatible with Python 3.13
+#     "torch",
+#     "torchvision",
+#     "lightning",
+#     "flash-attn",
+#     "cupy-cuda12x",
+#     "cuml-cu12",
+#     "xgboost[gpu]",
+# ]
 vision = [
-    "timm>=1.0.12",  # PyTorch image models
-    "torchvision>=0.20.1",
-    "albumentations>=1.4.22",
-    "opencv-python>=4.10.0",
-    "pillow>=11.0.0",
-    "torchmetrics>=1.5.2",
+    "timm",  # PyTorch image models
+    "torchvision",
+    "albumentations",
+    "opencv-python",
+    "pillow",
+    "torchmetrics",
 ]
 nlp = [
-    "transformers>=4.47.1",
-    "tokenizers>=0.21.0",
-    "sentencepiece>=0.2.0",
-    "accelerate>=1.2.1",
-    "datasets>=3.2.0",
-    "sentence-transformers>=3.3.1",
-    "spacy>=3.8.3",
+    "transformers",
+    "tokenizers",
+    "sentencepiece",
+    "accelerate",
+    "datasets",
+    "sentence-transformers",
+    "spacy",
 ]
 timeseries = [
-    "prophet>=1.1.6",
-    "neuralprophet>=0.9.2",
-    "darts>=0.32.0",
-    "statsforecast>=2.0.0",
-    "neuralforecast>=1.7.5",
-    "gluonts>=0.15.1",
-    "tslearn>=0.6.3",
+    "prophet",
+    "neuralprophet",
+    "darts",
+    "statsforecast",
+    "neuralforecast",
+    "gluonts",
+    "tslearn",
 ]
-autogluon = [
-    "autogluon>=1.2.0",
-    "autogluon.tabular>=1.2.0",
-    "autogluon.timeseries>=1.2.0",
-]
+# autogluon = [
+#     "autogluon",  # Not yet compatible with Python 3.13
+#     "autogluon.tabular",
+#     "autogluon.timeseries",
+# ]
 nas = [
-    "autokeras>=2.0.0",
-    "keras-tuner>=1.4.7",
-    "nni>=3.0",  # Neural Network Intelligence
+    "autokeras",
+    "keras-tuner",
+    "nni",  # Neural Network Intelligence
 ]
 api = [
     # REST API and async server
-    "fastapi>=0.115.6",
-    "uvicorn[standard]>=0.34.0",
-    "pydantic>=2.10.3",
-    "httpx>=0.28.1",
-    "websockets>=14.1",
+    "fastapi",
+    "uvicorn[standard]",
+    "pydantic",
+    "httpx",
+    "websockets",
     # Distributed caching and task queue
-    "redis>=5.2.1",
-    "hiredis>=3.0.0",  # High-performance Redis parser
-    "celery>=5.4.0",
-    "kombu>=5.4.2",  # Messaging library
+    "redis",
+    "hiredis",  # High-performance Redis parser
+    "celery",
+    "kombu",  # Messaging library
     # Production utilities
-    "gunicorn>=23.0.0",  # WSGI HTTP Server
-    "python-multipart>=0.0.18",  # Form data parsing
+    "gunicorn",  # WSGI HTTP Server
+    "python-multipart",  # Form data parsing
 ]
 monitoring = [
     # Metrics and observability
-    "prometheus-client>=0.21.0",
-    "grafana-client>=4.0.2",
-    "statsd>=4.0.1",
+    "prometheus-client",
+    "grafana-client",
+    "statsd",
     # Model monitoring and drift detection
-    "evidently>=0.4.48",
-    "alibi-detect>=0.12.1",
-    "deepchecks>=0.18.1",
-    "nannyml>=0.10.7",
+    "evidently",
+    "alibi-detect",
+    "deepchecks",
+    "nannyml",
 ]
 tracking = [
     # Experiment tracking
-    "mlflow>=2.18.0",
-    "wandb>=0.18.7",
-    "tensorboard>=2.18.0",
-    "aim>=3.24.0",
+    "mlflow",
+    "wandb",
+    "tensorboard",
+    "aim",
     # Model registry
-    "mlflow-skinny>=2.18.0",
+    "mlflow-skinny",
 ]
 devtools = [
-    "ipykernel>=6.29.5",
-    "jupyter>=1.1.1",
-    "notebook>=7.3.2",
-    "jupyterlab>=4.3.4",
-    "ipywidgets>=8.1.5",
+    "ipykernel",
+    "jupyter",
+    "notebook",
+    "jupyterlab",
+    "ipywidgets",
 ]
 security = [
     # Security and compliance
-    "cryptography>=44.0.0",  # Model encryption
-    "pynacl>=1.5.0",  # Cryptographic library
-    "paramiko>=3.5.0",  # SSH for secure connections
+    "cryptography",  # Model encryption
+    "pynacl",  # Cryptographic library
+    "paramiko",  # SSH for secure connections
 ]
 dashboard = [
     # Interactive dashboard
-    "streamlit>=1.40.0",
-    "plotly>=5.24.0",
-    "altair>=5.5.0",
-    "bokeh>=3.6.0",
+    "streamlit",
+    "plotly",
+    "altair",
+    "bokeh",
 ]
 benchmarks = [
     # Benchmarking and comparison
-    "openml>=0.14.2",  # OpenML dataset repository
-    "scikit-learn-intelex>=2024.7.0",  # Intel optimizations
+    "openml",  # OpenML dataset repository
+    "scikit-learn-intelex",  # Intel optimizations
 ]
 docs_gen = [
     # Automated documentation generation
-    "pdoc3>=0.11.1",
-    "sphinx>=8.1.3",
-    "sphinx-rtd-theme>=3.0.2",
-    "docstring-parser>=0.16",
+    "pdoc3",
+    "sphinx",
+    "sphinx-rtd-theme",
+    "docstring-parser",
 ]
 production = [
     # Production-ready exabyte-scale stack
     "automl[distributed,api,monitoring,tracking,security]",
 ]
 ultimate = [
-    # Everything - nothing left out
-    "automl[distributed,gpu,vision,nlp,timeseries,api,monitoring,tracking,security,dashboard,benchmarks,docs_gen]",
+    # Everything - nothing left out (except gpu and autogluon which need Python 3.12)
+    "automl[distributed,vision,nlp,timeseries,api,monitoring,tracking,security,dashboard,benchmarks,docs_gen]",
 ]
 all = [
     "automl[ultimate]",
@@ -261,36 +260,35 @@ all = [
 package = true
 default-groups = ["dev"]
 python-preference = "managed"
-required-version = ">=0.5.0"
 
 [dependency-groups]
 dev = [
-    "pytest>=8.3",
-    "pytest-cov>=5.0",
-    "pytest-asyncio>=0.24",
-    "hypothesis>=6.112",
-    "ruff>=0.6",
-    "mypy>=1.11",
-    "types-PyYAML>=6.0.12",
-    "types-requests>=2.32",
+    "pytest",
+    "pytest-cov",
+    "pytest-asyncio",
+    "hypothesis",
+    "ruff",
+    "mypy",
+    "types-PyYAML",
+    "types-requests",
 ]
 docs = [
-    "mkdocs-material>=9.5",
-    "mkdocstrings[python]>=0.24",
-    "griffe>=0.45",
+    "mkdocs-material",
+    "mkdocstrings[python]",
+    "griffe",
 ]
 bench = [
-    "pytest-benchmark>=4.0",
-    "perfana>=0.0.8",
+    "pytest-benchmark",
+    "perfana",
 ]
 notebooks = [
-    "polars[pandas]>=1.8",
-    "plotly>=5.24",
+    "polars[pandas]",
+    "plotly",
 ]
 qa = [
-    "pytest-xdist>=3.6",
-    "pytest-timeout>=2.3",
-    "pytest-rerunfailures>=12.0",
+    "pytest-xdist",
+    "pytest-timeout",
+    "pytest-rerunfailures",
 ]
 
 [tool.uv.dependency-groups]
