--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py==2.3.1
 alembic==1.16.5
 altair==5.5.0
 annotated-types==0.7.0
@@ -5,6 +6,7 @@ antlr4-python3-runtime==4.9.3
 anyio==4.11.0
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
+astunparse==1.6.3
 attrs==25.3.0
 authlib==1.6.4
 blinker==1.9.0
@@ -30,18 +32,25 @@ email-validator==2.3.0
 exceptiongroup==1.3.0
 fastapi==0.118.0
 fastmcp==2.12.4
+filelock==3.19.1
 flask==3.1.2
+flatbuffers==25.9.23
 fonttools==4.60.1
+fsspec==2025.9.0
+gast==0.6.0
 gitdb==4.0.12
 gitpython==3.1.45
 google-auth==2.41.1
+google-pasta==0.2.0
 graphene==3.4.3
 graphql-core==3.2.6
 graphql-relay==3.2.0
 graphviz==0.21
 greenlet==3.2.4
+grpcio==1.75.1
 gunicorn==23.0.0
 h11==0.16.0
+h5py==3.14.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.1
@@ -57,28 +66,48 @@ joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
+keras==3.11.3
 kiwisolver==1.4.9
 lazy-object-proxy==1.12.0
 liac-arff==2.5.0
+libclang==18.1.1
 lightgbm==4.6.0
 llvmlite==0.45.1
 mako==1.3.10
+markdown==3.9
 markdown-it-py==4.0.0
 markupsafe==3.0.3
 matplotlib==3.10.6
 mcp==1.15.0
 mdurl==0.1.2
 minio==7.2.18
+ml-dtypes==0.5.3
 mlflow==3.4.0
 mlflow-skinny==3.4.0
 mlflow-tracing==3.4.0
 more-itertools==10.8.0
+mpmath==1.3.0
 mypy==1.18.2
 mypy-extensions==1.1.0
+namex==0.1.0
 narwhals==2.6.0
+networkx==3.5
 numba==0.62.1
 numpy==2.3.3
-nvidia-nccl-cu12==2.28.3
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
 omegaconf==2.3.0
 openapi-core==0.19.5
 openapi-pydantic==0.5.1
@@ -89,6 +118,8 @@ opentelemetry-api==1.37.0
 opentelemetry-proto==1.37.0
 opentelemetry-sdk==1.37.0
 opentelemetry-semantic-conventions==0.58b0
+opt-einsum==3.4.0
+optree==0.17.0
 optuna==4.5.0
 packaging==25.0
 pandas==2.3.3
@@ -132,6 +163,7 @@ rsa==4.9.1
 ruff==0.13.2
 scikit-learn==1.7.2
 scipy==1.16.2
+setuptools==80.9.0
 shap==0.48.0
 shellingham==1.5.4
 six==1.17.0
@@ -144,11 +176,18 @@ sqlparse==0.5.3
 sse-starlette==3.0.2
 starlette==0.48.0
 streamlit==1.50.0
+sympy==1.14.0
 tenacity==9.1.2
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.1.0
 threadpoolctl==3.6.0
 toml==0.10.2
+torch==2.8.0
 tornado==6.5.2
 tqdm==4.67.1
+triton==3.4.0
 typer==0.19.2
 types-pyyaml==6.0.12.20250915
 types-requests==2.32.4.20250913
@@ -159,6 +198,8 @@ urllib3==2.5.0
 uvicorn==0.37.0
 watchdog==6.0.0
 werkzeug==3.1.1
+wheel==0.45.1
+wrapt==1.17.3
 xgboost==3.0.5
 xmltodict==1.0.2
 zipp==3.23.0
